--- a/backend/settings.json
+++ b/backend/settings.json
@@ -15,6 +15,8 @@
   "JWT_SECRET": "5klhfpoasydrehkjhadfkhkjhkjasdf43454",
   "NODE_ENV":"development",
   "mongodbURL": "mongodb+srv://dropshipping:TRGYx5rMSwJ9D9bF@cluster0.llijbhy.mongodb.net/dropshipping?retryWrites=true&w=majority&appName=Cluster0",
+  "STORE_ID":"a2nzo65ef05a9b01c1",
+  "STORE_PASSWORD":"a2nzo65ef05a9b01c1@ssl",
   "bkash": {
     "username": "sandboxTokenizedUser02",
     "password": "sandboxTokenizedUser02@12345",
