--- a/backend/package.json
+++ b/backend/package.json
@@ -29,11 +29,13 @@
     "mongoose": "^6.8.4",
     "mongoose-paginate-v2": "^1.7.1",
     "morgan": "^1.10.0",
+    "node-global-storage": "^2.0.0",
     "nodemailer": "^6.9.1",
     "peer": "^1.0.0",
     "socket.io": "^4.6.1",
     "spdy": "^4.0.2",
     "sslcommerz-lts": "^1.1.0",
+    "uuid": "^9.0.1",
     "web-push": "^3.5.0"
   },
   "devDependencies": {
