--- a/backend/settings.json
+++ b/backend/settings.json
@@ -18,10 +18,18 @@
   "STORE_ID":"a2nzo65ef05a9b01c1",
   "STORE_PASSWORD":"a2nzo65ef05a9b01c1@ssl",
   "bkash": {
-    "username": "sandboxTokenizedUser02",
-    "password": "sandboxTokenizedUser02@12345",
-    "appKey": "4f6o0cjiki2rfm34kfdadl1eqq",
-    "appSecret": "2is7hdktrekvrbljjh44ll3d9l1dtjo4pasmjvs5vl5qr3fug4b",
-    "isSandbox": true
+    "test_number1":"01619777282",
+    "test_number2":"01823074817", 
+    "test_number3":"01823074818",
+    "pass":"12121",
+    "opt":"123456",
+    "bkash_username":"sandboxTokenizedUser02",
+    "bkash_password":"sandboxTokenizedUser02@12345",
+    "bkash_api_key":"4f6o0cjiki2rfm34kfdadl1eqq",
+    "bkash_secret_key":"2is7hdktrekvrbljjh44ll3d9l1dtjo4pasmjvs5vl5qr3fug4b",
+    "bkash_grant_token_url":"https://tokenized.sandbox.bka.sh/v1.2.0-beta/tokenized/checkout/token/grant",
+    "bkash_create_payment_url":"https://tokenized.sandbox.bka.sh/v1.2.0-beta/tokenized/checkout/create",
+    "bkash_execute_payment_url":"https://tokenized.sandbox.bka.sh/v1.2.0-beta/tokenized/checkout/execute",
+    "bkash_refund_transaction_url":"https://tokenized.sandbox.bka.sh/v1.2.0-beta/tokenized/checkout/payment/refund"
   }
 }
