--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,12 @@
   "name": "rest-api-boilerplate",
   "version": "1.1.0",
   "description": "A framework like boilerplate on top of express.js, socketio, mongodb",
-  "main": "dist/index.js",
+  "main": "./src/app.js",
   "repository": "git@github.com:dreygur/rest-api-boilerplate.git",
   "author": "Rakibul Yeasin <ryeasin03@gmail.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "babel src -d dist && node-git-info",
     "start": "node dist/index.js",
     "dev": "nodemon --exec babel-node src/index.js",
     "lint": "eslint src --ext js"
